--- a/Week3/homework/package.json
+++ b/Week3/homework/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   },
-  "devDependencies": {},
   "description": ""
 }
