--- a/Week3/homework/package.json
+++ b/Week3/homework/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^3.6.6",
     "mysql": "^2.18.1",
     "util": "^0.12.3"
   }
